Fix maven-surefire-plugin issues